SCRUM-93: now magnolia-templating instead of magnolia-module-templating
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-5.0-templating@45643 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-templating-components/pom.xml
+++ b/magnolia-templating-components/pom.xml
@@ -56,7 +56,7 @@
       <version>4.4-SNAPSHOT</version> <scope>provided</scope> </dependency -->
     <dependency>
       <groupId>info.magnolia</groupId>
-      <artifactId>magnolia-module-templating</artifactId>
+      <artifactId>magnolia-templating</artifactId>
       <version>5.0-SNAPSHOT</version>
     </dependency>
     <dependency>
