--- a/magnolia-ui-admincentral/pom.xml
+++ b/magnolia-ui-admincentral/pom.xml
@@ -36,7 +36,7 @@
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
-      <artifactId>magnolia-module-templating</artifactId>
+      <artifactId>magnolia-templating</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
