--- a/magnolia-module-admininterface/pom.xml
+++ b/magnolia-module-admininterface/pom.xml
@@ -32,7 +32,7 @@
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
-      <artifactId>magnolia-module-templating</artifactId>
+      <artifactId>magnolia-templating</artifactId>
       <version>5.0-SNAPSHOT</version>
     </dependency>
     <dependency>
