--- a/magnolia-templating-compatibility-taglib-cms/pom.xml
+++ b/magnolia-templating-compatibility-taglib-cms/pom.xml
@@ -27,7 +27,7 @@
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
-      <artifactId>magnolia-module-templating</artifactId>
+      <artifactId>magnolia-templating</artifactId>
       <version>5.0-SNAPSHOT</version>
     </dependency>
     <!-- this dependency should be removed when templating/adminInterface are properly split -->
