SCRUM-93: new module names
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-5.0-templating@45679 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -128,7 +128,7 @@
     </dependency>
     <dependency>
     	<groupId>info.magnolia</groupId>
-    	<artifactId>magnolia-module-samples</artifactId>
+    	<artifactId>magnolia-templating-samples</artifactId>
     	<version>5.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
