--- a/magnolia-module-admininterface/pom.xml
+++ b/magnolia-module-admininterface/pom.xml
@@ -36,6 +36,11 @@
       <version>5.0-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>info.magnolia</groupId>
+      <artifactId>magnolia-templating-compatibility</artifactId>
+      <version>5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
