--- a/magnolia-ui-vaadin-widgetset/pom.xml
+++ b/magnolia-ui-vaadin-widgetset/pom.xml
@@ -49,11 +49,9 @@
       <artifactId>lazyloadwrapper</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.vaadin.addons</groupId>
+      <groupId>temp.org.vaadin.addons</groupId>
       <artifactId>vaadin-chameleon-theme</artifactId>
       <version>1.1.0</version>
-      <scope>system</scope>
-      <systemPath>${basedir}/temp-libs/vaadin-chameleon-theme-1.1.0.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>javax.validation</groupId>
