--- a/pom.xml
+++ b/pom.xml
@@ -285,6 +285,11 @@ for Java Content Repositories (JCR).
         <version>1.0.2</version>
       </dependency>
       <dependency>
+        <groupId>temp.org.vaadin.addons</groupId>
+        <artifactId>vaadin-chameleon-theme</artifactId>
+        <version>1.1.0</version>
+      </dependency>
+      <dependency>
         <groupId>com.google.gwt</groupId>
         <artifactId>gwt-user</artifactId>
         <version>2.3.0</version>
