non released dep prevents magnolia project to be relased
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@46147 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-templating-compatibility-taglib-utility/pom.xml
+++ b/magnolia-templating-compatibility-taglib-utility/pom.xml
@@ -24,7 +24,7 @@
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
-      <artifactId>magnolia-taglib-cms</artifactId>
+      <artifactId>magnolia-templating-compatibility-taglib-cms</artifactId>
       <version>5.0-SNAPSHOT</version>
     </dependency>
     <dependency>
