--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>5.0-SNAPSHOT</version>
+    <version>5.0-m4-s3</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -129,7 +129,7 @@
     <dependency>
     	<groupId>info.magnolia</groupId>
     	<artifactId>magnolia-templating-samples</artifactId>
-    	<version>5.0-SNAPSHOT</version>
+    	<version>5.0-m4-s3</version>
     </dependency>
   </dependencies>
   <build>
