--- a/magnolia-module-admininterface/pom.xml
+++ b/magnolia-module-admininterface/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>5.0-SNAPSHOT</version>
+    <version>5.0-m4-s3</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -13,32 +13,32 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>5.0-SNAPSHOT</version>
+      <version>5.0-m4-s3</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-exchange-simple</artifactId>
-      <version>5.0-SNAPSHOT</version>
+      <version>5.0-m4-s3</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-gui</artifactId>
-      <version>5.0-SNAPSHOT</version>
+      <version>5.0-m4-s3</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-jaas</artifactId>
-      <version>5.0-SNAPSHOT</version>
+      <version>5.0-m4-s3</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-templating</artifactId>
-      <version>5.0-SNAPSHOT</version>
+      <version>5.0-m4-s3</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-templating-compatibility</artifactId>
-      <version>5.0-SNAPSHOT</version>
+      <version>5.0-m4-s3</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -107,7 +107,7 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>5.0-SNAPSHOT</version>
+      <version>5.0-m4-s3</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
