--- a/magnolia-module-ckeditor/pom.xml
+++ b/magnolia-module-ckeditor/pom.xml
@@ -3,13 +3,13 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>5.0-SNAPSHOT</version>
+    <version>5.0-m4-s3</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>info.magnolia</groupId>
   <artifactId>magnolia-module-ckeditor</artifactId>
-  <version>5.0-SNAPSHOT</version>
+  <version>5.0-m4-s3</version>
   <packaging>jar</packaging>
   <name>CKEditor Magnolia Module</name>
 
