--- a/magnolia-module-wcm/pom.xml
+++ b/magnolia-module-wcm/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>info.magnolia</groupId>
     <artifactId>magnolia-project</artifactId>
-    <version>5.0-SNAPSHOT</version>
+    <version>5.0-m4-s3</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>magnolia-module-wcm</artifactId>
