--- a/magnolia-templating-compatibility/pom.xml
+++ b/magnolia-templating-compatibility/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>5.0-m4-s3</version>
+    <version>5.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -13,17 +13,17 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>5.0-m4-s3</version>
+      <version>5.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-gui</artifactId>
-      <version>5.0-m4-s3</version>
+      <version>5.0-SNAPSHOT</version>
     </dependency>
     <dependency>
     	<groupId>info.magnolia</groupId>
     	<artifactId>magnolia-templating</artifactId>
-    	<version>5.0-m4-s3</version>
+    	<version>5.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
@@ -54,7 +54,7 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>5.0-m4-s3</version>
+      <version>5.0-SNAPSHOT</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
