[SCRUM-72][SCRUM-169] admin central navigation: custom accordion implementation
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@46213 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-admincentral/pom.xml
+++ b/magnolia-ui-admincentral/pom.xml
@@ -18,11 +18,14 @@
     <dependency>
       <groupId>org.vaadin.addons</groupId>
       <artifactId>vaadin-treetable</artifactId>
-      <version>1.2.0</version>
     </dependency>
     <dependency>
       <groupId>org.vaadin.addons</groupId>
       <artifactId>lazyloadwrapper</artifactId>
+    </dependency>
+    <dependency>
+       <groupId>org.vaadin.addons</groupId>
+       <artifactId>animator</artifactId>
     </dependency>
     <dependency>
       <groupId>temp.org.vaadin.addons</groupId>
