--- a/magnolia-ui-vaadin-widgetset/pom.xml
+++ b/magnolia-ui-vaadin-widgetset/pom.xml
@@ -38,7 +38,6 @@
     <dependency>
       <groupId>org.vaadin.addons</groupId>
       <artifactId>vaadin-treetable</artifactId>
-      <version>1.2.0</version>
     </dependency>
     <dependency>
       <groupId>org.vaadin.addons</groupId>
@@ -47,6 +46,10 @@
     <dependency>
       <groupId>org.vaadin.addons</groupId>
       <artifactId>lazyloadwrapper</artifactId>
+    </dependency>
+    <dependency>
+       <groupId>org.vaadin.addons</groupId>
+       <artifactId>animator</artifactId>
     </dependency>
     <dependency>
       <groupId>temp.org.vaadin.addons</groupId>
