--- a/pom.xml
+++ b/pom.xml
@@ -272,7 +272,7 @@ for Java Content Repositories (JCR).
       <dependency>
         <groupId>org.vaadin.addons</groupId>
         <artifactId>vaadin-treetable</artifactId>
-        <version>1.1.1</version>
+        <version>1.2.0</version>
       </dependency>
       <dependency>
 	    <groupId>org.vaadin.addons</groupId>
@@ -283,6 +283,11 @@ for Java Content Repositories (JCR).
         <groupId>org.vaadin.addons</groupId>
         <artifactId>lazyloadwrapper</artifactId>
         <version>1.0.2</version>
+      </dependency>
+      <dependency>
+         <groupId>org.vaadin.addons</groupId>
+         <artifactId>animator</artifactId>
+         <version>1.6.4</version>
       </dependency>
       <dependency>
         <groupId>temp.org.vaadin.addons</groupId>
