--- a/pom.xml
+++ b/pom.xml
@@ -274,7 +274,7 @@ for Java Content Repositories (JCR).
       <dependency>
         <groupId>com.vaadin</groupId>
         <artifactId>vaadin</artifactId>
-        <version>6.7-SNAPSHOT</version>
+        <version>6.6.2</version>
       </dependency>
       <dependency>
         <groupId>org.vaadin.addons</groupId>
@@ -720,16 +720,6 @@ for Java Content Repositories (JCR).
       <url>http://nexus.magnolia-cms.com/content/repositories/magnolia.public.releases/</url>
       <snapshots>
         <enabled>false</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>vaadin-snapshots</id>
-      <url>http://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
       </snapshots>
     </repository>
   </repositories>
