reverted changes done in rev. 46395
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@46433 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-admincentral/pom.xml
+++ b/magnolia-ui-admincentral/pom.xml
@@ -17,6 +17,10 @@
     </dependency>
     <dependency>
       <groupId>org.vaadin.addons</groupId>
+      <artifactId>vaadin-treetable</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.vaadin.addons</groupId>
       <artifactId>lazyloadwrapper</artifactId>
     </dependency>
     <dependency>
