--- a/magnolia-ui-vaadin-widgetset/pom.xml
+++ b/magnolia-ui-vaadin-widgetset/pom.xml
@@ -37,6 +37,10 @@
     </dependency>
     <dependency>
       <groupId>org.vaadin.addons</groupId>
+      <artifactId>vaadin-treetable</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.vaadin.addons</groupId>
       <artifactId>confirmdialog</artifactId>
     </dependency>
     <dependency>
