--- a/pom.xml
+++ b/pom.xml
@@ -274,7 +274,12 @@ for Java Content Repositories (JCR).
       <dependency>
         <groupId>com.vaadin</groupId>
         <artifactId>vaadin</artifactId>
-        <version>6.7-SNAPSHOT</version>
+        <version>6.6.2</version>
+      </dependency>
+      <dependency>
+        <groupId>org.vaadin.addons</groupId>
+        <artifactId>vaadin-treetable</artifactId>
+        <version>1.2.0</version>
       </dependency>
       <dependency>
 	    <groupId>org.vaadin.addons</groupId>
