--- a/magnolia-module-mail/pom.xml
+++ b/magnolia-module-mail/pom.xml
@@ -89,7 +89,7 @@
     </dependency>
     <dependency>
       <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <artifactId>junit-dep</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
