--- a/magnolia-templating-compatibility-taglib-utility/pom.xml
+++ b/magnolia-templating-compatibility-taglib-utility/pom.xml
@@ -61,7 +61,7 @@
     </dependency>
     <dependency>
       <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <artifactId>junit-dep</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
