--- a/magnolia-templating-compatibility/pom.xml
+++ b/magnolia-templating-compatibility/pom.xml
@@ -60,7 +60,7 @@
     </dependency>
     <dependency>
       <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <artifactId>junit-dep</artifactId>
     </dependency>
     <dependency>
       <groupId>org.easymock</groupId>
