--- a/magnolia-templating-samples/pom.xml
+++ b/magnolia-templating-samples/pom.xml
@@ -39,7 +39,7 @@
     </dependency>
     <dependency>
       <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <artifactId>junit-dep</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
