--- a/magnolia-templating/pom.xml
+++ b/magnolia-templating/pom.xml
@@ -50,7 +50,7 @@
     </dependency>
     <dependency>
       <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <artifactId>junit-dep</artifactId>
     </dependency>
     <dependency>
       <groupId>org.easymock</groupId>
