--- a/magnolia-ui-model/pom.xml
+++ b/magnolia-ui-model/pom.xml
@@ -18,7 +18,7 @@
     </dependency>
     <dependency>
       <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <artifactId>junit-dep</artifactId>
       <scope>test</scope>
     </dependency>
         <dependency>
