--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -36,12 +36,12 @@
   <dependencies>
     <dependency>
       <groupId>info.magnolia</groupId>
-      <artifactId>magnolia-templating</artifactId>
+      <artifactId>magnolia-rendering</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
-      <artifactId>magnolia-templating-components</artifactId>
+      <artifactId>magnolia-templating</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
