--- a/magnolia-templating/pom.xml
+++ b/magnolia-templating/pom.xml
@@ -8,8 +8,8 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
   <groupId>info.magnolia</groupId>
-  <artifactId>magnolia-templating-components</artifactId>
-  <name>magnolia-templating-components</name>
+  <artifactId>magnolia-templating</artifactId>
+  <name>magnolia-templating</name>
 
   <properties>
     <taglib.shortname>ui</taglib.shortname>
@@ -56,7 +56,7 @@
       <version>4.4-SNAPSHOT</version> <scope>provided</scope> </dependency -->
     <dependency>
       <groupId>info.magnolia</groupId>
-      <artifactId>magnolia-templating</artifactId>
+      <artifactId>magnolia-rendering</artifactId>
       <version>5.0-SNAPSHOT</version>
     </dependency>
     <dependency>
