--- a/magnolia-templating-compatibility/pom.xml
+++ b/magnolia-templating-compatibility/pom.xml
@@ -22,7 +22,7 @@
     </dependency>
     <dependency>
     	<groupId>info.magnolia</groupId>
-    	<artifactId>magnolia-templating</artifactId>
+    	<artifactId>magnolia-rendering</artifactId>
     	<version>5.0-SNAPSHOT</version>
     </dependency>
     <dependency>
